--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "hackerhouse_basic",
-  "image": "ghcr.io/dfinity/icp-dev-env:16",  
+  "image": "ghcr.io/dfinity/icp-dev-env:16",
   "forwardPorts": [4943, 8080],
   "portsAttributes": {
     "4943": {
@@ -13,11 +13,16 @@
     }
   },
   "onCreateCommand": "nohup bash -c 'scripts/setup.sh &'",
-  "postCreateCommand": "",
+  "postCreateCommand": "nohup bash -c 'scripts/postCreateSetup.sh &'",
   "postAttachCommand": "([ -f nohup.out ] && (cat nohup.out && rm nohup.out)) || exit 0",
   "customizations": {
     "vscode": {
-      "extensions": ["dfinity-foundation.vscode-motoko", "ms-python.python", "GitHub.copilot", "esbenp.prettier-vscode"],
+      "extensions": [
+        "dfinity-foundation.vscode-motoko",
+        "ms-python.python",
+        "GitHub.copilot",
+        "esbenp.prettier-vscode"
+      ],
       "settings": { "editor.formatOnSave": true }
     }
   }
