--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,9 +8,17 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@dfinity/agent": "^2.1.3"
+    "@dfinity/agent": "^2.1.3",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "vite": "5.4.11",
     "vite-plugin-environment": "1.1.3"
   }
